--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ python =
 
 [testenv]
 setenv=
-    DJANGO_SETTINGS_MODULE=django_tiptap_demo.settings
+    DJANGO_SETTINGS_MODULE=django_tiptap2_demo.settings
 deps =
     black
     isort
@@ -25,8 +25,8 @@ deps =
     django31: Django>=3.1,<3.2
     django32: Django>=3.2,<3.3
 commands =
-    isort --profile=black django_tiptap django_tiptap_demo
+    isort --profile=black django_tiptap django_tiptap2_demo
     black .
     {envbindir}/coverage erase
-    {envbindir}/coverage run --include=django_tiptap_demo/* -m pytest -ra django_tiptap_demo/
+    {envbindir}/coverage run --include=django_tiptap2_demo/* -m pytest -ra django_tiptap2_demo/
     {envbindir}/coverage report -m
